Hide overflow from lc-stack to prevent artifacts when resizing.

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -1,5 +1,6 @@
 .lc-stack
   position relative
+  overflow hidden
 
   .lc-layer
     position absolute
